infra/k8s/admin/service-prod.yaml
apiVersion: v1
kind: Service
metadata:
  name: admin
  namespace: admin-namespace
spec:
  selector:
    app: admin
  ports:
    - name: http
      port: 4000
      targetPort: 4000
  type: ClusterIP
